--- a/BookingSystemApi.Tests/BookingSystemApi.Tests.csproj
+++ b/BookingSystemApi.Tests/BookingSystemApi.Tests.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BookingSystemApi\BookingSystemApi.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
